--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@angular/ssr": "^19.1.7",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.1.7",
     "@angular/cli": "^19.1.7",
     "@angular/compiler-cli": "^19.1.0",
+    "@netlify/angular-runtime": "^2.2.2",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
